@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-03-31T08:07:33Z",
+  "timestamp" : "2022-03-31T16:06:20Z",
   "count_outdated" : 1188,
   "uniques_outdated" : 328,
-  "count" : 1429,
+  "count" : 1431,
   "uniques" : 347,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-03-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count": 4,
+      "count_minmax": [ 0, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
